Fix nav background on mobile
 .main-nav background: none !important;

--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -39,7 +39,7 @@
 @media (min-width: 700px) {
   .main-nav {
     background: variabler.$dark;
-
+    opacity: 0;
     ul {
       display: grid;
       grid-gap: 20px;
@@ -85,7 +85,7 @@
   }
 
   .main-nav {
-    background: none;
+    background: none !important;
   }
 
   .topp-kontainer {
